--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>HomeWork12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <header class="container-header">
+    <form class="form-search" action="submit" id="search-form">
+    <input class="input-form" type="text" name="query" placeholder="Search images...">
+    <button class="btn-form" type="submit" >Search</button>
+    </input>
+    </form>
+   </header>
 
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+      <span class="loader" style="display: none">Loading...</span>
 
-    <load src="./partials/footer.html" />
+      <ul class="gallery"></ul>
+      <button class="js-load-more" style="display: none;">Load More</button>
+    </main>
 
     <script type="module" src="./main.js"></script>
   </body>
