corection index.html

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,9 @@
    </header>
 
     <main>
-      <span class="loader" style="display: none">Loading...</span>
-
-      <ul class="gallery"></ul>
-      <button class="js-load-more" style="display: none;">Load More</button>
+      <div class="gallery"></div>
+      <button class="js-load-more" style="display: none;">Load More</button> 
+      <div class="loader" style="display: none">Loading...</div>
     </main>
 
     <script type="module" src="./main.js"></script>
